--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=notification
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/notify_db
+spring.datasource.username=notify_user
+spring.datasource.password=notify_pass
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
