--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,13 +19,18 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
-# Email comfigurations
-spring.mail.host=live.smtp.mailtrap.io
+# Email configurations
+spring.mail.host=
 spring.mail.port=587
-spring.mail.username=smtp@mailtrap.io
-spring.mail.password=c863a2156920b4999a0e3107d4bef7c4
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=3000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
+# sms configuration
+twilio.account_sid=
+twilio.auth_token=
+twilio.from_number=
